<resources>
    <string name="app_name">Bora</string>
    <string name="statistic_title">감정 통계</string>
    <string name="statistic_monthly_statis">이번달 통계</string>
    <string name="statistic_years_color">올해의 색깔들</string>
    <string name="statistic_pleasure">기쁨</string>
    <string name="statistic_happy">행복</string>
    <string name="statistic_exciting">신남</string>
    <string name="statistic_peace">평화</string>
    <string name="statistic_sadness">슬픔</string>
    <string name="statistic_unrest">불안</string>
    <string name="statistic_anger">분노</string>
    <string name="statistic_petulance">짜증</string>
    <string name="comment_month">%d월</string>

    <string name="default_number">%d</string>
    <string name="default_short_number">%d</string>

    <string-array name="custom_weekdays">
        <item>mon</item>
        <item>tue</item>
        <item>wed</item>
        <item>thu</item>
        <item>fri</item>
        <item>sat</item>
        <item>sun</item>
    </string-array>

    <string-array name="emotions">
        <item>기쁨</item>
        <item>행복</item>
        <item>신남</item>
        <item>평화</item>
        <item>슬픔</item>
        <item>불안</item>
        <item>분노</item>
        <item>짜증</item>
    </string-array>

    <string-array name="custom_months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="statistic_years_color_contents">한달 중 가장 많이 선택한 색상을\n월별로 보여드려요!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
